# chir.rs

./: .env  .gitignore  .hlint.yaml  Cargo.nix  Cargo.toml  LICENSE.md  chir-rs.cabal  config-example.toml  deny.toml  flake.nix  gencert.sh  renovate.json  result  stack.yaml
.cargo/: config.toml
.github/workflows/: ci.yaml  deny.yaml  update-cargo-nix.yaml  update-flake-lock.yaml  update-flake.yaml
assets/: common-dark.css  style.css  sunset.css  trans-rights.css
chir-rs/: Cargo.toml
chir-rs-castore/: Cargo.toml
chir-rs-castore/src/: lib.rs
chir-rs-client/: Cargo.toml
chir-rs-client/src/: main.rs
chir-rs-config/: Cargo.toml
chir-rs-config/src/: lib.rs
chir-rs-db/: Cargo.toml
chir-rs-db/.sqlx/: query-20689c3363e0c27e4664c608378b9731f98e1e9d8d9122cc8c7e63773fcb5bf2.json  query-380dafcfb2f2aee834d5c3e3550458973ca6d6215a5b14303dd53c54b94ebf40.json  query-3b729cf7297b569253249000a3cc0de67106e426a1ae4e7cdac6eb85eeeb3849.json  query-4eb1d9d2853313df1b2a2050de46d609d719ce7cf906df70d693ffc186468351.json  query-882da6c909603e0916ea9971dafe30de43484ab9c574f6ae0c01331419bf9c31.json  query-88de2bc8bea8b9b5f1de736af16ed3cc0a2711b37687e595619fa001fa2633bc.json  query-b2fb58d4c75841a1255cc06ca009e874853f418594f89648800b6d4183a68273.json
chir-rs-db/migrations/: 20241123151924_add-file-table.sql  20241130085255_add-user.sql  20241130090439_service-user-account.sql
chir-rs-db/src/: file.rs  lib.rs  session.rs  user.rs
chir-rs-fe/: Cargo.toml  index.html
chir-rs-fe/src/: lib.rs
chir-rs-gemini/: Cargo.toml
chir-rs-http/: Cargo.toml
chir-rs-http-api/: Cargo.toml
chir-rs-http-api/src/: lib.rs
chir-rs-http-api/src/auth/: mod.rs
chir-rs-http-api/src/axum/: bincode.rs  error.rs  mod.rs
chir-rs-http-api/src/errors/: mod.rs
chir-rs-http/src/: lib.rs
chir-rs-http/src/auth/: mod.rs
chir-rs-http/src/auth/password_login/: mod.rs
chir-rs-http/src/auth/req_auth/: auth_header.rs
chir-rs-http/src/ca_server/: mod.rs
chir-rs-macros/: Cargo.toml
chir-rs-macros/src/: lib.rs
chir-rs-misc/: Cargo.toml
chir-rs-misc/src/: id_generator.rs  lib.rs
chir-rs/src/: err.rs  homepage.rs  main.rs  static_file.rs  theming.rs
chir-rs/src/lang/: mod.rs
chir-rs/templates/: layout.html
common/protos/: Cargo.toml
common/protos/src/: lib.rs  session.rs
components/auth/: Cargo.toml
components/auth-model/: Cargo.toml
components/auth-web/: Cargo.toml
config/: routes.yesodroutes
crates/chir-rs/: Cargo.toml  build.rs
crates/chir-rs-common/: Cargo.toml
crates/chir-rs-common/src/: id_generator.rs  lexicographic_base64.rs  lib.rs  queue.rs
crates/chir-rs-common/src/http_api/: mod.rs  readiness.rs
crates/chir-rs-common/src/http_api/auth/: mod.rs
crates/chir-rs-common/src/http_api/axum/: bincode.rs  error.rs
crates/chir-rs-common/src/http_api/errors/: mod.rs
crates/chir-rs-common/src/http_api/robots/: mod.rs
crates/chir-rs-fe/: Cargo.toml
crates/chir-rs-fe/src/: lib.rs
crates/chir-rs-fe/src/home/: mod.rs
crates/chir-rs-fe/src/login/: mod.rs
crates/chir-rs-fe/src/robots/: mod.rs
crates/chir-rs/.sqlx/: query-0111263582f15dcd83a82c8cad8c52d51a02d06eac9a6ac5e354b4c15511708d.json  query-15cda82a44a079e1fda4ea12353dbb6ed16674bd389608fd6c6030719429b125.json  query-200f77407f56567cdc4cb7fd8dd52e9c5e239028a369fdd39e6e851d659b8a10.json  query-332a0dcad34fa9a2f91c960210305f9663ac81684774527e2db3c8f5fd01beda.json  query-36791ce483604b032f9924f1954f893d055e64a10a58a6aa81007d9947fc96fe.json  query-41c54def7a43820b600d8abe7cb50e8c20a34fd334af2ee38c093ebe5cfa22d3.json  query-493543eea67ec3e3ffa4f99e72c3bc730a66fc2c67f4df6327ebd2d83fbea5be.json  query-59ecfc0f3f0a721ba2fb8b4a953313e0b0701ae34c1e609f3f92a4009d6ee4b3.json  query-6042c941f318400a9233cd88cbeb1d482be42714ecd0cf6252d3507db84c800d.json  query-66bfd094377b41902ca75e47f50f0b39582bfb7b7bc56756b66d1c052b6657bf.json  query-6ddd935c0ae0ab44710fcc31a451065883e2ddd9009090c2eb1ac1c2e1e26809.json  query-70e64fd04c14da44c067745485581944981b457ed51dfefa9d410ab4c1ebfad0.json  query-8c07587248ea45d3a03ba0dacfa0305ca797b29caf608955d0fdf1548348e5e2.json  query-8f2468ed5c3973142b0d02e48d640ec02425377f03dbd530b63509f6a3c30fce.json  query-901fc1a96f594180afb99be7afd88ab5eef09b843c83861ac8884e16a85b8a96.json  query-a81c7ed1670ddb90c2075233d606adb6b29195c66f367d5c01e3bcefd4e6ba39.json  query-a890d5ff7316e8d1f9252feda2e12c69e592ad3d3959ff0e6a9317f908bf51ec.json  query-b3c251582e8806fd2d49e09a80eafd347fdeb712ce7ee4974ebcdae8327f6214.json  query-b6bcd52d1d27e34f07ceadbf5862ec929c7dea4a6e908b3f8fd05c64002240bf.json  query-c086da344a6da521e817bcecf4318e3b338e0b2652d5869a9901390c41f58b65.json  query-cd05ca7bb4dc20ca09d8134eedbe133b840759b9571047b7a017e7b045c08535.json  query-d106239b2ed99a8be668c5a6bf4b6cf7d997d302b2087787be6d5bd225f3e7c2.json  query-d810de143050dea42c2a4bcea51045f2f683730742c82b2929bd458722780562.json  query-e25f59cf49514cfa75eca503b242f3ec06775f8abf7364d2cfc10f59ec35a303.json  query-e559924057fe87472683e404ae5fb4e45e4816cce49ba999f5917fe81e779281.json
crates/chir-rs/migrations/: 20241130081151_add-file-b3hash-index.sql  20241204073434_roll-custom-session-ids.sql  20250405081833_app-queue.sql  20250407072643_app-queue-deps.sql  20250407111556_robots-txt.sql  20250410152318_regenerate-robots.sql
crates/chir-rs/src/: castore.rs  config.rs  gemini.rs  main.rs  robots.rs
crates/chir-rs/src/db/: file.rs  mod.rs  session.rs  user.rs
crates/chir-rs/src/http/: mod.rs
crates/chir-rs/src/http/auth/: mod.rs
crates/chir-rs/src/http/auth/password_login/: mod.rs
crates/chir-rs/src/http/auth/req_auth/: auth_header.rs  mod.rs
crates/chir-rs/src/http/ca_server/: mod.rs
crates/chir-rs/src/http/robots/: mod.rs
crates/chir-rs/src/queue/: mod.rs
hydra/: default.nix  jobsets.nix  spec.json
lib/ld-microformats/: Cargo.toml
src/: Application.hs  Config.hs  Foundation.hs  main.rs
templates/: default-layout.hamlet  homepage.hamlet
test/: Test.hs
web/: .postcssrc.js  .prettierignore  babel.config.json  eslint.config.mjs  package.json  postcss.config.js  tsconfig.json  webpack.config.js  yarn.nix
(+79 files in other folders)
