[workspace]
members = [
    "chir-rs",
    "chir-rs-castore",
    "chir-rs-client",
    "chir-rs-config",
    "chir-rs-db",
    "chir-rs-fe",
    "chir-rs-gemini",
    "chir-rs-http",
    "chir-rs-http-api",
    "chir-rs-misc",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
debug = "full"
strip = "none"
