cabal-version:      2.4
name:               chir-rs
version:            0.1.0.0
copyright:          2023 Charlotte ðŸ¦ Delenk
maintainer:         lotte@chir.rs
author:             Charlotte ðŸ¦ Delenk
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           Personal homepage

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  config/**/*.persistentmodels
  config/**/*.yesodroutes
  LICENSE
  README.md
  src/**/*.phs
  templates/**/*.hamlet

flag library-only
  description: Build for use with "yesod devel"
  default:     False
  manual:      False

flag dev
  description: Turn on development settings, like auto-reload templates.
  manual:      False
  default:     False

library
  if (flag(dev) || flag(library-only))
    ghc-options:
      -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
      -fprint-explicit-foralls -fprint-explicit-kinds -O0

    cpp-options: -DDEVELOPMENT

  else
    ghc-options:
      -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
      -fprint-explicit-foralls -fprint-explicit-kinds -O3

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    CPP
    DataKinds
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    QuasiQuotes
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base                   >=4.13.0.0 && <4.18.0.0.0
    , base64-bytestring
    , blaze-html
    , cborg
    , cborg-json
    , conduit
    , conduit-extra
    , containers
    , cryptonite
    , data-default
    , dhall
    , directory
    , fast-logger
    , filepath
    , haskell-src-meta
    , hjsmin
    , hourglass
    , http-conduit
    , http-link-header
    , http-types
    , jose
    , lens
    , lens-aeson
    , microformats2-parser
    , monad-logger
    , mtl
    , network-uri
    , parsec
    , persistent
    , persistent-migration
    , persistent-postgresql
    , profunctors
    , random
    , relude                 >=1.0
    , resource-pool
    , resourcet
    , serialise
    , shakespeare
    , shower
    , template-haskell
    , these
    , time
    , url
    , validation
    , vector
    , wai
    , wai-extra
    , warp
    , webauthn
    , with-utf8
    , yesod
    , yesod-core
    , yesod-persistent
    , yesod-static

  hs-source-dirs:     src
  default-language:   GHC2021
  exposed-modules:
    Application
    Codec.CBOR.Class
    Components.Image
    Config
    Config.Images
    Config.StaticFiles
    Control.Alternative
    Control.ToEither
    Crypto.Auth.Token
    Crypto.FidoMetadataManager
    Crypto.KeyStore
    Data.Queue
    Foundation
    Handler.FinishRegistration
    Handler.Home
    Handler.OauthJwks
    Handler.OauthMetadata
    Handler.Register
    Handler.StartRegistration
    Handler.WebauthnChallenge
    Handler.Webfinger
    Model
    Model.Migration
    Network.Microformats2
    Network.URL.Normalize
    Text.Internationalisation
    Text.Internationalisation.Deutsch
    Text.Internationalisation.English
    Text.Internationalisation.EnglishSteno
    Text.Internationalisation.Francais
    Text.Internationalisation.Lojban
    Text.Internationalisation.Lojban.Convert
    Text.Internationalisation.Nederlands
    Text.Internationalisation.TokiPona
    Text.Internationalisation.TokiPona.Common
    Text.Internationalisation.TokiPona.SitelenEmosi
    Text.Internationalisation.TokiPona.SitelenLasina
    Text.Internationalisation.TokiPona.SitelenMunjan
    Text.Internationalisation.TokiPona.SitelenPona
    Text.Internationalisation.Types
    Text.PUA.TH
    Utils

executable chir-rs
  main-is:          Main.hs
  hs-source-dirs:   app
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  build-depends:
    , base       >=4.13.0.0 && <4.18.0.0.0
    , chir-rs
    , relude
    , with-utf8

  default-language: GHC2021

  if flag(library-only)
    buildable: False

test-suite unit-test
  type:             exitcode-stdio-1.0
  main-is:          UnitTest.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  build-depends:
    , base              >=4.13.0.0 && <4.18.0.0.0
    , chir-rs
    , relude
    , tasty
    , tasty-quickcheck
    , with-utf8

  other-modules:
    Test
    Test.Codec
    Test.Codec.CBOR
    Test.Codec.CBOR.Class

  default-language: GHC2021
