[package]
name = "chir-rs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.0-rc.3"
chir-rs-http-api = { version = "0.1.0", path = "../chir-rs-http-api" }
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
eyre = "0.6.12"
mime = "0.3.17"
mime_guess = "2.0.5"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1.41.1", features = ["fs", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
