[package]
name = "chir-rs-db"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "2.0.0-rc.3"
serde = { version = "1.0.215", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "derive", "macros", "migrate", "postgres", "sqlite"], default-features = false }
eyre = "0.6.12"
tracing = "0.1.40"
blake3 = { version = "1.5.4", features = ["serde"] }
tokio = { version = "1.41.1", features = ["fs", "macros", "rt", "sync", "time"] }
mime = "0.3.17"
chir-rs-http-api = { version = "0.1.0", path = "../chir-rs-http-api" }
chir-rs-misc = { version = "0.1.0", path = "../chir-rs-misc", features = ["id-generator"] }
rand = "0.9.0"
futures = "0.3.31"
dashmap = "6.1.0"
chrono = "0.4.39"

[lints.rust]
deprecated-safe = "forbid"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
impl-trait-overcaptures = "warn"
keyword-idents-2024 = "forbid"
let-underscore-drop = "warn"
macro-use-extern-crate = "deny"
meta-variable-misuse = "deny"
missing-abi = "forbid"
missing-copy-implementations = "warn"
missing-debug-implementations = "deny"
missing-docs = "warn"
missing-unsafe-on-extern = "deny"
non-local-definitions = "warn"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "deny"
unnameable-types = "warn"
unreachable-pub = "warn"
unsafe-code = "forbid"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"
alloc-instead-of-core = "warn"
allow-attributes-without-reason = "deny"
assertions-on-result-states = "forbid"
clone-on-ref-ptr = "warn"
empty-drop = "warn"
expect-used = "deny"
inline-asm-x86-att-syntax = "forbid"
missing-docs-in-private-items = "warn"
panic = "deny"
panic-in-result-fn = "forbid"
rc-buffer = "warn"
rc-mutex = "deny"
unwrap-used = "forbid"
