[package]
name = "chir-rs-http"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.0", features = ["tracing"] }
axum-prometheus = "0.8.0"
b64-ct = "0.1.2"
bincode = "2.0.0-rc.3"
chir-rs-castore = { version = "0.1.0", path = "../chir-rs-castore" }
chir-rs-config = { version = "0.1.0", path = "../chir-rs-config" }
chir-rs-db = { version = "0.1.0", path = "../chir-rs-db" }
chir-rs-http-api = { version = "0.1.0", path = "../chir-rs-http-api", features = [
    "axum",
] }
chir-rs-misc = { version = "0.1.0", path = "../chir-rs-misc", features = [
    "base64",
] }
chrono = "0.4.38"
eyre = "0.6.12"
futures = "0.3.31"
mime = "0.3.17"
rusty_paseto = { version = "0.7.1", default-features = false, features = [
    "batteries_included",
    "v4_local",
] }
sentry-tower = { version = "0.36.0", features = ["axum", "axum-matched-path"] }
tokio = { version = "1.41.1", features = ["fs", "net"] }
tokio-util = { version = "0.7.13", features = ["compat"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
unicode-normalization = "0.1.24"

[lints.rust]
deprecated-safe = "forbid"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
impl-trait-overcaptures = "warn"
keyword-idents-2024 = "forbid"
let-underscore-drop = "warn"
macro-use-extern-crate = "deny"
meta-variable-misuse = "deny"
missing-abi = "forbid"
missing-copy-implementations = "warn"
missing-debug-implementations = "deny"
missing-docs = "warn"
missing-unsafe-on-extern = "deny"
non-local-definitions = "warn"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unit-bindings = "deny"
unnameable-types = "warn"
unreachable-pub = "warn"
unsafe-code = "forbid"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"
alloc-instead-of-core = "warn"
allow-attributes-without-reason = "deny"
assertions-on-result-states = "forbid"
clone-on-ref-ptr = "warn"
empty-drop = "warn"
expect-used = "deny"
inline-asm-x86-att-syntax = "forbid"
missing-docs-in-private-items = "warn"
panic = "deny"
panic-in-result-fn = "forbid"
rc-buffer = "warn"
rc-mutex = "deny"
unwrap-used = "forbid"
