[package]
name = "chir-rs-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
blake3 = { version = "1.5.1", features = ["rayon"] }
mime_guess = "2.0.4"
phf_codegen = "0.11.2"
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.52"
