[package]
name = "chir-rs-macros"
version = "0.1.0"
edition = "2021"
authors = ["Charlotte 🦝 Delenk <lotte@chir.rs>"]
rust-version = "1.74.0"
description = "lotte.chir.rs website proc macros"
readme = "README.md"
homepage = "https://lotte.chir.rs/"
repository = "https://github.com/DarkKirb/chir.rs"
license = "Parity-7.0.0"
keywords = ["website"]
categories = ["web-programming"]
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
blake3 = { version = "1.5.1", features = ["rayon"] }
mime_guess = "2.0.4"
phf_codegen = "0.11.2"
proc-macro2 = "1.0.84"
quote = "1.0.35"
syn = "2.0.52"
