[package]
name = "chir-rs"
version = "0.1.0"
edition = "2021"
authors = ["Charlotte 🦝 Delenk <lotte@chir.rs>"]
rust-version = "1.74.0"
description = "lotte.chir.rs website"
readme = "README.md"
homepage = "https://lotte.chir.rs/"
repository = "https://github.com/DarkKirb/chir.rs"
license = "Parity-7.0.0"
keywords = ["website"]
categories = ["web-programming"]
publish = false

[lints.rust]
unsafe-code = "forbid"
future-incompatible = "forbid"
missing-copy-implementations = "warn"
missing-debug-implementations = "deny"
trivial-casts = "warn"
unreachable-pub = "warn"
unused-crate-dependencies = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"
missing-docs = "warn"

[lints.clippy]
nursery = "warn"
pedantic = "warn"
assertions-on-result-states = "deny"
clone-on-ref-ptr = "deny"
create-dir = "deny"
dbg-macro = "warn"
decimal-literal-representation = "warn"
empty-drop = "deny"
empty-structs-with-brackets = "warn"
error-impl-error = "deny"
exit = "deny"
expect_used = "deny"
float-cmp-const = "warn"
fn-to-numeric-cast-any = "forbid"
format-push-string = "warn"
get-unwrap = "deny"
if-then-some-else-none = "warn"
indexing-slicing = "warn"
integer-division = "warn"
lossy-float-literal = "deny"
map-err-ignore = "warn"
mem-forget = "deny"
missing-docs-in-private-items = "warn"
mutex-atomic = "warn"
needless-raw-strings = "warn"
panic = "forbid"
rc-buffer = "warn"
rc-mutex = "forbid"
redundant-type-annotations = "warn"
string-lit-chars-any = "warn"
string-slice = "deny"
string-to-string = "warn"
todo = "warn"
unseparated_literal_suffix = "warn"

[dependencies]
accept-language = "3.1.0"
anyhow = { version = "1.0.82", features = ["backtrace"] }
askama = "0.12.1"
askama_axum = "0.4.0"
axum = "0.7.4"
chir-rs-macros = { version = "0.1.0", path = "../chir-rs-macros" }
dotenvy = "0.15.7"
fluent-templates = "0.9.1"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7.10", features = ["tracing", "io"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-zstd", "compression-gzip"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unic-langid = { version = "0.9.4", features = ["unic-langid-macros"] }
