[package]
name = "chir-rs-auth-model"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Charlotte 🦝 Delenk"]
description = "Model for interacting with chir-rs-auth"
repository = "https://github.com/darkkirb/chir.rs"
keywords = ["authentication", "opaque", "webauthn"]
categories = ["web-programming"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.0", features = ["zeroize"] }
base64urlsafedata = "0.1.3"
opaque-ke = { version = "2.0.0", features = ["argon2", "std"] }
serde = { version = "1.0.152", features = ["derive"] }
webauthn-rs-proto = "0.4.8"
