[package]
name = "chir-rs-auth"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Charlotte 🦝 Delenk"]
description = "Authentication microservice for chir.rs"
repository = "https://github.com/darkkirb/chir.rs"
keywords = ["authentication", "opaque", "webauthn"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
async-trait = "0.1.64"
axum = { version = "0.6.9", features = ["headers", "macros"] }
base64 = "0.21.0"
chir-rs-auth-model = { path = "../auth-model" }
chrono = { version = "0.4.23", features = ["serde"] }
deadpool-redis = { version = "0.11.1", features = ["serde"] }
dotenvy = "0.15.6"
educe = "0.4.20"
headers = "0.3.8"
once_cell = "1.17.1"
opaque-ke = { version = "2.0.0", features = ["argon2", "std"] }
pasetors = "0.6.5"
rand = "0.8.5"
redis = { version = "0.22.3" }
serde = { version = "1.0.152", features = ["derive"] }
serde_dhall = { version = "0.12.1", default-features = false }
serde_json = "1.0.93"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = [
    "postgres",
    "offline",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "migrate",
    "json",
] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["time", "env-filter"] }
uuid = { version = "1.3.0", features = ["v5"] }
webauthn-rs = { version = "0.4.8", features = [
    "danger-allow-state-serialisation",
] }
