[package]
name = "chir-rs-common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum-core = { version = "0.5.2", optional = true }
b64-ct = "0.1.3"
base64 = "0.22.1"
bincode = "2.0.1"
bytes = { version = "1.10.1", optional = true }
chrono = "0.4.40"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
eyre = "0.6.12"
http = "1.3.1"
mime = { version = "0.3.17", optional = true }
rand = { version = "0.9.0", optional = true }
serde = "1.0.219"
thiserror = "2.0.12"
tracing = "0.1.41"

[lints]
workspace = true

[features]
axum = ["dep:axum-core", "dep:bytes", "dep:mime"]
id_generator = ["dep:rand"]
