[package]
name = "chir-rs-fe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "2.0.0-rc.3"
chir-rs-common = { version = "0.1.0", path = "../chir-rs-common" }
console_error_panic_hook = "0.1.7"
eyre = "0.6.12"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unicode-normalization = "0.1.24"
wasm-bindgen = "=0.2.100"
wasm-tracing = "2.0.0"
web-sys = { version = "0.3.76", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
getrandom = { version = "0.3", features = ["wasm_js"] }

[build-dependencies]
wasm-bindgen-cli = { version = "=0.2.100", artifact = "bin" }

[lints]
workspace = true
