
[package]
name = "chir-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.82.0"
axum = { version = "0.8.3", features = ["tracing"] }
axum-prometheus = "0.8.0"
b64-ct = "0.1.3"
bincode = "2.0.1"
blake3 = { version = "1.8.1", features = ["rayon", "serde"] }
bytes = "1.10.1"
chir-rs-common = { version = "0.1.0", path = "../chir-rs-common", features = ["axum"] }
chrono = "0.4.40"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
educe = { version = "0.6.0", default-features = false, features = ["Debug"] }
eyre = "0.6.12"
futures = "0.3.31"
mime = "0.3.17"
rand = "0.9.0"
rustls = "0.23.25"
rusty_paseto = "0.7.2"
sentry = { version = "0.37.0", default-features = false, features = [
    "backtrace",
    "contexts",
    "debug-images",
    "panic",
    "reqwest",
    "rustls",
] }
sentry-core = "0.37.0"
sentry-eyre = { git = "https://github.com/auguwu/sentry-eyre" }
sentry-tower = { version = "0.37.0", features = ["axum", "axum-matched-path"] }
sentry-tracing = { version = "0.37.0", features = ["backtrace"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "derive", "macros", "migrate", "postgres", "sqlite"] }
stretto = { version = "0.8.4", features = ["async"] }
tokio = { version = "1.41.1", features = ["fs", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = "0.26.2"
tokio-util = { version = "0.7.14", features = ["compat"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
unicode-normalization = "0.1.24"
url = "2.5.4"

[lints]
workspace = true
